--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,21 @@ target_link_libraries(wol-cli
         wol
 )
 
+include(FetchContent)
+
+FetchContent_Declare(
+    CLI11
+    GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
+    GIT_TAG v2.4.2
+)
+
+FetchContent_MakeAvailable(CLI11)
+
+target_link_libraries(wol-cli
+    PRIVATE
+        CLI11::CLI11
+)
+
 set_target_properties(wol-cli PROPERTIES OUTPUT_NAME wol)
 
 
